--- a/front/index.html
+++ b/front/index.html
@@ -46,7 +46,7 @@
 	<!-- Main jumbotron for a primary marketing message or call to action -->
 	<div class="jumbotron">
 	  <div class="container">
-		<h1>2015年暑期留校研究生学生信息统计</h1>
+		<h1>通信学院 2015年“国庆节”假期学生登记表</h1>
 	  </div>
 	</div>
 	<form id="form">
@@ -58,10 +58,6 @@
 	  </div>
 	  
 	  <div class="row">
-	  	<input name="学院" type="text" class="form-control" placeholder="学院" value="通信与信息工程学院"/>
-	  </div>
-	  
-	  <div class="row">
 	  	<input name="姓名" type="text" class="form-control" placeholder="姓名"/>
 	  </div>
 
@@ -70,57 +66,6 @@
 	  </div>
 
 	  <div class="row">
-	  	<input name="性别" type="text" class="form-control" placeholder="性别"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="民族" type="text" class="form-control" placeholder="民族"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="生源地（省\直辖市）" type="text" class="form-control" placeholder="生源地（省\直辖市）"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="留校时间段" type="text" class="form-control" placeholder="留校时间段：2015-7-16~2015-8-8"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="所在校区（沙河，清水河）" type="text" class="form-control" placeholder="所在校区（沙河，清水河）" value="清水河"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="寝室号" type="text" class="form-control" placeholder="寝室号"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="校外居住地址" type="text" class="form-control" placeholder="校外居住地址"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="学生手机号码" type="text" class="form-control" placeholder="学生手机号码"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="导师姓名" type="text" class="form-control" placeholder="导师姓名"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="导师手机号码" type="text" class="form-control" placeholder="导师手机号码"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="辅导员姓名" type="text" class="form-control" placeholder="辅导员姓名" value="刘雨萌"/>
-	  </div>
-
-	  <div class="row">
-	  	<input name="辅导员手机号码" type="text" class="form-control" placeholder="辅导员手机号码" value="13548093535"/>
-	  </div>
-	  
-	  
-	  
-	  
-<!-- 	  <div class="row">
 	  	<input name="是否离校" type="text" class="form-control" placeholder="是否离校：是/否">
 	  </div>
 	  
@@ -146,8 +91,8 @@
 	  
 	  <div class="row">
 	  	<input name="家庭联系方式" type="text" class="form-control" placeholder="家庭联系方式">
-	  </div> -->
-	  	<input name="event" type="hidden" value="2015年暑期留校研究生学生信息统计"/>
+	  </div>
+	  	<input name="event" type="hidden" value="通信学院 2015年“国庆节”假期学生登记表"/>
 
 	   <div class="row">
 	  <button id="submit" type="button" class="btn btn-default">提交</button>
