--- a/front/index.html
+++ b/front/index.html
@@ -46,11 +46,12 @@
 	<!-- Main jumbotron for a primary marketing message or call to action -->
 	<div class="jumbotron">
 	  <div class="container">
-		<h1>通信学院 2015年“国庆节”假期学生登记表</h1>
+		<h1>硕士研究生通过开题报告汇总表</h1>
 	  </div>
 	</div>
 	<form id="form">
 	<div class="container">
+		<p class="alert-success"></p>
 	  <!-- Example row of columns -->
 	 	<div>已提交人数: <span id="count" class="badge"></span></div>
 	  <div class="row">
@@ -58,46 +59,21 @@
 	  </div>
 	  
 	  <div class="row">
-	  	<input name="姓名" type="text" class="form-control" placeholder="姓名"/>
-	  </div>
-
-	  <div class="row">
 	  	<input name="学号" type="text" class="form-control" placeholder="学号"/>
 	  </div>
 
 	  <div class="row">
-	  	<input name="是否离校" type="text" class="form-control" placeholder="是否离校：是/否">
+	  	<input name="姓名" type="text" class="form-control" placeholder="姓名"/>
 	  </div>
 	  
 	  <div class="row">
-	  	<input name="离校原因" type="text" class="form-control" placeholder="离校原因">
+	  	<input name="报告题目" type="text" class="form-control" placeholder="报告题目(毕设题目)"/>
 	  </div>
-	  
-	  <div class="row">
-	  	<input name="外出地点（省市）" type="text" class="form-control" placeholder="外出地点（省市）：成都">
-	  </div>
-	  
-	  <div class="row">
-	  	<input name="离校时间" type="text" class="form-control" placeholder="离校时间">
-	  </div>
-	  
-	  <div class="row">
-	  	<input name="返校时间" type="text" class="form-control" placeholder="返校时间">
-	  </div>
-	  
-	  <div class="row">
-	  	<input name="个人联系方式" type="text" class="form-control" placeholder="个人联系方式">
-	  </div>
-	  
-	  <div class="row">
-	  	<input name="家庭联系方式" type="text" class="form-control" placeholder="家庭联系方式">
-	  </div>
-	  	<input name="event" type="hidden" value="通信学院 2015年“国庆节”假期学生登记表"/>
 
-	   <div class="row">
+	  	<input name="event" type="hidden" value="硕士研究生通过开题报告汇总表"/>
+
 	  <button id="submit" type="button" class="btn btn-default">提交</button>
 
-	  </div>
 	  <div>未提交同学: <ul id="notSubmit"></ul></div>
 	  <hr>
 	  <footer>
